--- a/src/pagesAdmin/MyPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerInitial/WorkerInitial.module.scss
@@ -3,26 +3,30 @@
   align-items: center;
   flex-direction: row;
   gap: 16px;
-}
 
-.workerAvatar {
-  padding-left: 24px;
-}
-.small .workerAvatar {
+
+   .small .workerAvatar {
+  border-radius: 100% ;
+  margin-left: 24px;
   width: 48px;
   height: 48px;
 }
 .large .workerAvatar {
+  border-radius: 100%;
+  margin-left: 24px;
   width: 72px;
   height: 72px;
 }
 
+
+}
+
 .workerName {
-    font-size: 24px;
-    color: #fff;
-    font-weight: 700;
-    line-height: 56px;
-  }
+  font-size: 24px;
+  color: #fff;
+  font-weight: 700;
+  line-height: 56px;
+}
 .workerMail {
   font-size: 16px;
   font-weight: 400;
