--- a/src/pagesAdmin/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
@@ -6,13 +6,17 @@
 }
 
 .workerAvatar {
-  padding-left: 24px;
+  visibility: inherit;
 }
 .small .workerAvatar {
+  margin-left: 24px;
+  border-radius: 100%;
   width: 48px;
   height: 48px;
 }
 .large .workerAvatar {
+  margin-left: 24px;
+  border-radius: 100%;
   width: 72px;
   height: 72px;
 }
